--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 </head>
 
 <body>
-    <section>
-        <article>
-            <form class="pure-steps">
-                <input type="radio" name="steps" class="pure-steps_radio" id="step-0" checked="">
-                <input type="radio" name="steps" class="pure-steps_radio" id="step-1">
-                <div class="pure-steps_group" id="app"></div>
-            </form>
-        </article>
-    </section>
+    <section id="app"></section>
 </body>
 <script src="./src/main.js"></script>
 
