--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="./src/manifest.webmanifest">
     <title>Master Password</title>
 </head>
 
 <body>
-    <section id="app"></section>
+    <section id="app"/>
 </body>
 <script src="./src/main.js"></script>
 
