--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="./src/manifest.webmanifest">
     <title>Master Password</title>
+    <link rel="stylesheet" href="./src/index.scss">
 </head>
 
 <body>
