feat: copy Snackbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1,minimum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google" content="notranslate"/>
     <link rel="manifest" href="./src/manifest.webmanifest">
     <title>Master Password</title>
     <link rel="stylesheet" href="./src/index.scss">
